updated image api
